--- a/html/index.html
+++ b/html/index.html
@@ -146,7 +146,7 @@
       menu.classList.toggle("hidden");
     });
   </script>
-  <script src="../js/index.js"></script>
+  <script type="module" src="../js/index.js"></script>
 </body>
 
 </html>
