--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
             menu.classList.toggle("hidden");
         });
     </script>
-    <script type="module" src="../js/blog.js"></script>
+    <script type="module" src="./js/blog.js"></script>
 </body>
 
 </html>
