--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
             menu.classList.toggle("hidden");
         });
     </script>
-    <script type="module" src="../js/work.js"></script>
+    <script type="module" src="./js/work.js"></script>
 </body>
 
 </html>
