--- a/works.html
+++ b/works.html
@@ -89,7 +89,7 @@
             menu.classList.toggle("hidden");
         });
     </script>
-    <script type="module" src="../js/works.js"></script>
+    <script type="module" src="./js/works.js"></script>
 </body>
 
 </html>
